@@ -163,6 +163,7 @@ The list of hooks currently called is:
 
 	iconify-window-hook	called with the window as parameter
 	uniconifiy-window-hook
+	window-state-change-hook
 
 For a description of the structures defining window frame parts, see
 src/frames.c. Search for a comment starting ``building frames from
