@@ -28,7 +28,8 @@ todo:
   - GNOME compliance
 
     Currently event proxying and the pager hints are implemented.
-    Add support for the various window state operations..
+    Add support for the various window state operations.. (currently
+    only the sticky attribute is supported)
 
   - GUI configuration
 
