@@ -1,5 +1,8 @@
 1999-08-02  John Harper  <john@dcs.warwick.ac.uk>
 
+	* workspace.jl (ws-add-window-to-space): abort if the window is
+	marked as being sticky
+
 	* workspace.jl: call window-state-change-hook when the window's
 	``state'' (i.e. sticky, iconified, ..) changes
 
